--- a/dotNet/NamingAndCommenting/NamingAndCommenting.csproj
+++ b/dotNet/NamingAndCommenting/NamingAndCommenting.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Solution\CalculatorEnhancedTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="paket.references" />
     <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
