DEV | updated location  travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ solution: CleanCode.sln
 before_install:
   - sudo apt-get install nunit-console
 before_script:
-  - nuget restore CleanCode.sln
+  - nuget restore dotNet/CleanCode.sln
 after_script:
-  - nunit-console NamingAndCommenting/bin/Release/NamingAndCommenting.dll
+  - nunit-console dotNet/NamingAndCommenting/bin/Release/NamingAndCommenting.dll
