--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: csharp
-solution: CleanCode.sln
+solution: dotNet/CleanCode.sln
 before_install:
   - sudo apt-get install nunit-console
 before_script:
