--- a/dotNet/SolidPrinciplesRefactored/SolidPrinciplesRefactored.csproj
+++ b/dotNet/SolidPrinciplesRefactored/SolidPrinciplesRefactored.csproj
@@ -57,10 +57,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Hardware.Api\HpPrinter.cs" />
     <Compile Include="Model\PaymentMethod.cs" />
     <Compile Include="RestaurantTests.cs" />
     <Compile Include="Services\CalculatorService.cs" />
     <Compile Include="Services\CookingService.cs" />
+    <Compile Include="Services\CreditCardMachine.cs" />
     <Compile Include="Services\ICalculatorService.cs" />
     <Compile Include="Services\ICookingService.cs" />
     <Compile Include="Services\IPaymentService.cs" />
@@ -72,6 +74,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\PaymentService.cs" />
     <Compile Include="Services\PrintService.cs" />
+    <Compile Include="Services\Receipt.cs" />
+    <Compile Include="Utilities\Exceptions\RejectedCardException.cs" />
+    <Compile Include="Utilities\Exceptions\NotValidPaymentException.cs" />
+    <Compile Include="Utilities\Exceptions\OrderException.cs" />
+    <Compile Include="Utilities\Logger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
