--- a/dotNet/SolidPrinciplesRefactored/SolidPrinciplesRefactored.csproj
+++ b/dotNet/SolidPrinciplesRefactored/SolidPrinciplesRefactored.csproj
@@ -59,7 +59,7 @@
   <ItemGroup>
     <Compile Include="Hardware.Api\HpPrinter.cs" />
     <Compile Include="Model\PaymentMethod.cs" />
-    <Compile Include="RestaurantTests.cs" />
+    <Compile Include="McBurgerRestaurantTests.cs" />
     <Compile Include="Services\CalculatorService.cs" />
     <Compile Include="Services\CookingService.cs" />
     <Compile Include="Services\CreditCardMachine.cs" />
@@ -70,7 +70,7 @@
     <Compile Include="Model\Order.cs" />
     <Compile Include="Model\OrderItem.cs" />
     <Compile Include="Model\PaymentDetails.cs" />
-    <Compile Include="Restaurant.cs" />
+    <Compile Include="McBurgerRestaurant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\PaymentService.cs" />
     <Compile Include="Services\PrintService.cs" />
