DEV | added LSP for refactoring

--- a/dotNet/SolidPrinciplesRefactored/SolidPrinciplesRefactored.csproj
+++ b/dotNet/SolidPrinciplesRefactored/SolidPrinciplesRefactored.csproj
@@ -58,6 +58,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hardware.Api\HpPrinter.cs" />
+    <Compile Include="Model\Constants.cs" />
+    <Compile Include="Model\MenuItem.cs" />
+    <Compile Include="Model\MenuItems\CheeseBurger.cs" />
+    <Compile Include="Model\MenuItems\CheeseBurgerMenu.cs" />
+    <Compile Include="Model\MenuItems\Drink.cs" />
     <Compile Include="Model\PaymentMethod.cs" />
     <Compile Include="McBurgerRestaurantTests.cs" />
     <Compile Include="Services\CalculationRules\BurgerRule.cs" />
