--- a/dotNet/SolidPrinciplesRefactored/SolidPrinciplesRefactored.csproj
+++ b/dotNet/SolidPrinciplesRefactored/SolidPrinciplesRefactored.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Services\PaymentService.cs" />
     <Compile Include="Services\PrintService.cs" />
     <Compile Include="Services\Receipt.cs" />
+    <Compile Include="Utilities\Exceptions\GatewayConnectionException.cs" />
     <Compile Include="Utilities\Exceptions\UnAuthorizedContactLessPayment.cs" />
     <Compile Include="Utilities\Exceptions\RejectedCardException.cs" />
     <Compile Include="Utilities\Exceptions\NotValidPaymentException.cs" />
