--- a/dotNet/SolidPrinciplesRefactored/SolidPrinciplesRefactored.csproj
+++ b/dotNet/SolidPrinciplesRefactored/SolidPrinciplesRefactored.csproj
@@ -75,8 +75,10 @@
     <Compile Include="Services\CalculatorService.cs" />
     <Compile Include="Services\CookingService.cs" />
     <Compile Include="Services\CreditCardMachine.cs" />
+    <Compile Include="Services\FakePaymentProcessor.cs" />
     <Compile Include="Services\ICalculatorService.cs" />
     <Compile Include="Services\ICookingService.cs" />
+    <Compile Include="Services\IPaymentProcessor.cs" />
     <Compile Include="Services\IPaymentService.cs" />
     <Compile Include="Services\IPrintService.cs" />
     <Compile Include="Model\Order.cs" />
@@ -84,6 +86,7 @@
     <Compile Include="Model\PaymentDetails.cs" />
     <Compile Include="McBurgerRestaurant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\PaymentProcessor.cs" />
     <Compile Include="Services\PaymentService.cs" />
     <Compile Include="Services\PrintService.cs" />
     <Compile Include="Services\Receipt.cs" />
